--- a/pages/login/styles/login.css
+++ b/pages/login/styles/login.css
@@ -171,23 +171,26 @@
       display: flex;
       gap: 2%;
     }
-    .btn-container button{
+form .btn-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5rem;
+}
+
+.btn-container button {
   font-size: 1.2rem;
-      font-weight: 400;
-      text-transform: capitalize;
-      padding: var(--btnpadding);
-      border-radius: 0.5rem;
-      width: 50%;
-      gap: 3%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-      row-gap: 10%;
-      white-space: nowrap;
-      border: none;
-      cursor: pointer;
-    }
+  font-weight: 400;
+  text-transform: capitalize;
+  padding: var(--btnpadding);
+  border-radius: 0.5rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  cursor: pointer;
+  margin-top: 0.5em;
+}
     .btn-container button:nth-child(1){
       color: white;
       background: var(--primary-color);
@@ -215,6 +218,11 @@
 
     /* MObile desktop view */
     @media screen and (min-height: 992px){
+      header{
+        position: fixed;
+        top: 0;
+        width: 100%;
+      }
       main{
         grid-template-columns: 1fr;
         grid-template-rows: 0 2fr;
@@ -223,7 +231,7 @@
       visibility: hidden;
     }
     form {
-      width: 350px;
+      width: 500px;
     }
   
     .items:nth-child(2) ul {
