--- a/pages/signup/styles/styles.css
+++ b/pages/signup/styles/styles.css
@@ -193,7 +193,7 @@ form .btn-container {
   margin-top: 0.5em;
 }
 
-.btn-container button:nth-child(1) {
+c:\Users\USA\Desktop\TeamGnatpp-qr-gen.btn-container button:nth-child(1) {
   color: white;
   background: var(--primary-color);
 }
