--- a/pages/forgot-password/styles/forgot-password.css
+++ b/pages/forgot-password/styles/forgot-password.css
@@ -192,25 +192,21 @@ form .btn-container {
 
 
 form .exit {
-  margin-top: 1rem;
   display: grid;
   place-content: center;
   text-align: center;
-  width: 5rem;
   position: absolute;
   z-index: 2;
-  top: 0;
-  right: 2%;
-  transform: rotate(90deg)
+  top: 3%;
+  right: 3%;
 
 }
 
 form .exit a {
   color: var(--primary-color);
-  width: 40px;
+  width: 30px;
   text-decoration: none;
   font-size: 2rem;
-  border-radius: 50%;
   display: block;
 }
 
@@ -335,7 +331,13 @@ form .exit a:hover {
   form {
     padding: 1rem;
   }
-
+    form h1{
+    font-size: 1.5rem;
+    white-space: nowrap;
+  }
+  form .exit a {
+    font-size: 1.5rem;
+  }
   form .btn-container {
     flex-direction: column;
   }
