--- a/pages/login/styles/login.css
+++ b/pages/login/styles/login.css
@@ -245,6 +245,10 @@ form .btn-container {
     
     *************************************************/
     @media screen and (max-width: 568px) {
+            
+      body{
+        overflow: auto;
+      }
       header .desktop-view{
         display: none;
       }
@@ -275,32 +279,38 @@ form .btn-container {
         color: var(--secondary-color);
       }
       .drop-items{
-        display: none;
+        position: absolute;
+        width: 0;
+        overflow: hidden;
+        background-color: var(--primary-color);
+        height: calc(100vh - 10vh);
+        transition: width 0.5s ease-in-out, opacity 0.5s ease-in-out;
+        opacity: 0;
       }
       .mobile-view .drop-down ul{
         list-style-type: none;
       }
       .mobile-view .drop-down ul li a{
-        border: 0.1rem solid rgba(128, 128, 128, 0.146);
-        padding: 0.6rem;
+        padding: 0.6rem 2rem 0.6rem 0.6rem;
         font-size: 1.2rem;
         font-weight: 500;
         list-style-type: none;
         display: block;
-        text-align: center;
+        text-align: right;
         text-decoration: none;
         text-transform: capitalize;
-        color: var(--primary-color);
-      }
-      .mobile-view .drop-down ul li a:hover{
         color: white;
-        background: var(--primary-color);
+        white-space: nowrap;
       }
-
-      body{
-        overflow: auto;
+      .mobile-view .drop-down ul li a:active{
+        color: var(--secondary-color);
       }
-    main section:nth-child(1) {
+      .slide{
+        width: 100%;
+        opacity: 1;
+        transition: width 0.5s;
+      }
+      main section:nth-child(1) {
       background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../../../resources/images/qr\ img.jpeg') center / cover no-repeat fixed;
     }
 
